2007-01-09  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* src/ephy-history-window.c:
	* src/ephy-main.c:
	* src/bookmarks/ephy-bookmarks-editor.c:
	* src/ephy-tab.c:
	* src/ephy-encoding-menu.c:
	* src/ephy-window.c:
	* data/glade/form-signing-dialog.glade:
	* data/glade/prefs-dialog.glade:

	Changes "..." for the ellipsis character "…". Bug #324380. Patch by
	Diego Escalante Urrelo.

2007-01-09  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* data/about.ini:

	Added myself as a Contributor. :).

2007-01-09  Christian Persch  <chpe@svn.gnome.org>

	* configure.ac:

	Post-release version bump.

2007-01-09  Christian Persch  <chpe@svn.gnome.org>

	=== Release 2.17.5 ===

	* NEWS:
	* configure.ac:
	* data/default-prefs-common.js:
	* doc/reference/tmpl/ephy-embed.sgml:

2007-01-08  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* src/ephy-python-extension.c:
	* src/epiphany.override:

	Fixes a problem at link time on Darwin, bug #387233. Patch by paul.

2007-01-08  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:

	Fixes the escaping in the error message "The page %s was not fully 
	loaded yet when the browser crashed..." by changing the
	g_strdup_printf into a g_markup_printf_escaped. Bug #374627. Patch by
	Diego Escalante Urrelo.

2007-01-08  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:

	Fixes the menu path of the service unavailable error message.

2007-01-08  Diego Escalante Urrelo <diegoe@svn.gnome.org>

	* src/popup-commands.c: (background_download_completed)

	Check the result of ephy_file_launch_desktop_file () so if it fails we
	try an alternative naming of the background capplet: gnome-background.
	This is seen in fedora. Bug #387206, which is actually caused by
	bugzilla.redhat.com #201867.

2007-01-08  Luca Ferretti  <elle.uca@libero.it>

	* data/epiphany.pc.in: 

	Added "icondir" variable ( == $datadir/$package/icons ).