@@ -1,5 +1,13 @@
 2007-01-09  Diego Escalante Urrelo <diegoe@svn.gnome.org>
 
+	* src/popup-commands.c:
+	* lib/ephy-file-helpers.c:
+
+	Opens images in a new browser window if EOG is not found. Bug #167595.
+	Patch by Björn Lindqvist.
+
+2007-01-09  Diego Escalante Urrelo <diegoe@svn.gnome.org>
+
 	* src/ephy-history-window.c:
 	* src/ephy-main.c:
 	* src/bookmarks/ephy-bookmarks-editor.c:
